mixed most sizing issues in all sizes.  Still need to fix small, some of the card is off screen.

--- a/lesson9/css/large.css
+++ b/lesson9/css/large.css
@@ -22,6 +22,7 @@
     .townsect {
         display: grid;
         width: 400px;
+        min-width: 400px;
         justify-content: center;
         text-align: center;
     }
